fixed top components overflow in chrome browser

--- a/src/components/Top.css
+++ b/src/components/Top.css
@@ -6,6 +6,7 @@
     z-index: -1;
     height: 70vh;
     width: 100%;
+    overflow-x: hidden;
 }
 .top-left{
     width: 70%;
